2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strcompat.refs: update references

2008-05-26  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strcompat.refs: update references
	* src/kernel/liscompat.c: fixed bug in lis_register_strdev().
	* src/manual/bugs.texi: documented bug

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: updates for release
	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* strcompat.lsm.in: updates for release
	* strcompat.spec.in: updates for release
	* debian/changelog: updates for release
	* debian/mscript_header.in: updates for release
	* debian/rules.in: updates for release
	* debian/strcompat-core.postinst.in: updates for release
	* debian/strcompat-core.postrm.in: updates for release
	* debian/strcompat-core.preinst.in: updates for release
	* debian/strcompat-core.prerm.in: updates for release
	* debian/strcompat-init.postinst.in: updates for release
	* debian/strcompat-init.preinst.in: updates for release

2008-05-03  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* doc/manual/prerequisites.texi: added strx25 sub-package

2008-04-28  Brian Bidulock  <bidulock@openss7.org>

	* strcompat.spec.in: updates for release
	* doc/man/strcompat.refs: updates for release

2008-04-25  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strcompat.refs: updated references

	* doc/manual/news.texi: updates to AGPLv3
	* doc/manual/releases.texi: updates to AGPLv3
	* doc/manual/strcompat.texi: updates to AGPLv3

2008-04-13  Brian Bidulock  <bidulock@openss7.org>

	* strcompat.spec.in: prepare for doc/papers
	* debian/rules.in: prepare for doc/papers

2008-04-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: autoconf 2.62 can't handle non-cache