@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: bugs.texi,v 0.9.2.6 2008-05-26 14:16:30 brian Exp $
+@c @(#) $Id: bugs.texi,v 0.9.2.7 2008/07/11 13:56:29 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,11 +53,18 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2008-05-26 14:16:30 $ by $Author: brian $
+@c Last Modified $Date: 2008/07/11 13:56:29 $ by $Author: brian $
 @c
 @c =========================================================================
 
 @table @code
+@item 006.  2008-07-11T13:52:04+0000
+
+lis_alloc_sem() was not setting the supplied count against the created
+semaphore, but was alway setting the semaphore to 1 (unlocked).
+
+@emph{*fixed*} in @command{strcompat-0.9.2.7}.
+
 @item 005.  2008-05-26T14:06:22+0000
 
 lis_register_strdev() was failing whenever nminor was greater than zero or
